@@ -322,6 +322,9 @@ BUG FIXES
     o   Sweave now uses anonymous file rather than text connections
 	to avoid the limits of the latter (see previous item).
 
+    o   parsing did not work on connections when pushback was used (as
+	it had never been implemented).  (PR#2396)
+
 
 		CHANGES IN R VERSION 1.6.1
 
